# top-k-sum

./: CITATION.bib  LICENSE  Project.toml  README.md
run/: Project.toml  helper_mks_experiments.jl  helper_tks_experiments.jl  plot_mks_experiments.jl  process_mks_experiments.jl  process_tks_experiments.jl  projection.jl  run_mks_experiments.jl  run_tks_experiments.jl
src/: TopKSum.jl  cppowl.jl  matrices.jl  projection_esgs.jl  projection_grid.jl  projection_gurobi.jl  projection_plcp.jl  projection_ssn.jl  utility.jl
src/CppOWL/: CMakeLists.txt  julia_interface.cpp  make  mod_CMakeLists.jl
test/: finitediff.jl  runtests.jl
